--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,3 @@
 PORT=5002
 SECRET=M9rc13l4g0sr3b93lt0s
-DABASE=mongodb://localhost:27017/sistema-jwt-usuarios
+DABASE=mongodb://localhost:27017/ShopDB
